--- a/TeamFortress2/TeamFortress2.vcxproj.filters
+++ b/TeamFortress2/TeamFortress2.vcxproj.filters
@@ -2,27 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="TeamFortress2\DLLMain.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Aimbot\Aimbot.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Aimbot\AimbotGlobal\AimbotGlobal.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Aimbot\AimbotHitscan\AimbotHitscan.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Aimbot\AimbotMelee\AimbotMelee.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Aimbot\AimbotProjectile\AimbotProjectile.cpp" />
-    <ClCompile Include="TeamFortress2\Features\AntiHack\AntiAim.cpp" />
-    <ClCompile Include="TeamFortress2\Features\ESP\ESP.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Glow\Glow.cpp" />
     <ClCompile Include="TeamFortress2\Features\Menu\InputHelper\InputHelper.cpp" />
     <ClCompile Include="TeamFortress2\Features\Menu\Menu.cpp" />
     <ClCompile Include="TeamFortress2\Features\Misc\Misc.cpp" />
     <ClCompile Include="TeamFortress2\Features\Chams\Chams.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Prediction\Prediction.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Radar\Radar.cpp" />
-    <ClCompile Include="TeamFortress2\Features\SpectatorList\SpectatorList.cpp" />
-    <ClCompile Include="TeamFortress2\Features\SpyWarning\SpyWarning.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Auto\AutoGlobal\AutoGlobal.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Auto\AutoShoot\AutoShoot.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Auto\AutoStab\AutoStab.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Auto\Auto.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Visuals\Visuals.cpp" />
     <ClCompile Include="TeamFortress2\Hooks\ClientHook\ClientHook.cpp" />
     <ClCompile Include="TeamFortress2\Hooks\ClientModeHook\ClientModeHook.cpp" />
     <ClCompile Include="TeamFortress2\Hooks\EngineClientHook\EngineClientHook.cpp" />
@@ -46,7 +29,6 @@
     <ClCompile Include="TeamFortress2\SDK\Main\EntityCache\EntityCache.cpp" />
     <ClCompile Include="TeamFortress2\SDK\Main\KeyValues\KeyValues.cpp" />
     <ClCompile Include="TeamFortress2\SDK\Main\TraceFilters\TraceFilters.cpp" />
-    <ClCompile Include="TeamFortress2\SDK\NetVars\NetVars.cpp" />
     <ClCompile Include="TeamFortress2\Utils\CRC\CRC.cpp" />
     <ClCompile Include="TeamFortress2\Utils\Hash\Hash.cpp" />
     <ClCompile Include="TeamFortress2\Utils\MinHook\buffer.c" />
@@ -55,43 +37,44 @@
     <ClCompile Include="TeamFortress2\Utils\MinHook\hook.c" />
     <ClCompile Include="TeamFortress2\Utils\MinHook\trampoline.c" />
     <ClCompile Include="TeamFortress2\Utils\Pattern\Pattern.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Auto\AutoDetonate\AutoDetonate.cpp" />
-    <ClCompile Include="TeamFortress2\Features\ChatInfo\ChatInfo.cpp" />
     <ClCompile Include="TeamFortress2\Features\Chams\DMEChams.cpp" />
     <ClCompile Include="TeamFortress2\Features\Menu\ConfigManager\ConfigManager.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Auto\AutoBlast\AutoBlast.cpp" />
-    <ClCompile Include="TeamFortress2\Features\Auto\AutoUber\AutoUber.cpp" />
     <ClCompile Include="TeamFortress2\Hooks\DrawStaticPropsHook\DrawStaticPropsHook.cpp" />
-    <ClCompile Include="TeamFortress2\Features\AttributeChanger\AttributeChanger.cpp" />
     <ClCompile Include="TeamFortress2\Hooks\EngineHook\EngineHook.cpp" />
-    <ClCompile Include="TeamFortress2\Features\PlayerList\PlayerList.cpp" />
     <ClCompile Include="TeamFortress2\Features\Keybinds\Keybinds.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Aimbot\AimbotGlobal\AimbotGlobal.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Aimbot\AimbotHitscan\AimbotHitscan.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Aimbot\AimbotMelee\AimbotMelee.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Aimbot\AimbotProjectile\AimbotProjectile.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Aimbot\Aimbot.cpp" />
+    <ClCompile Include="TeamFortress2\Features\AntiHack\AntiAim.cpp" />
+    <ClCompile Include="TeamFortress2\Features\AttributeChanger\AttributeChanger.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Auto\AutoBlast\AutoBlast.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Auto\AutoDetonate\AutoDetonate.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Auto\AutoGlobal\AutoGlobal.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Auto\AutoShoot\AutoShoot.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Auto\AutoStab\AutoStab.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Auto\AutoUber\AutoUber.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Auto\Auto.cpp" />
+    <ClCompile Include="TeamFortress2\Features\ChatInfo\ChatInfo.cpp" />
     <ClCompile Include="TeamFortress2\Features\Console\Console.cpp" />
+    <ClCompile Include="TeamFortress2\Features\ESP\ESP.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Glow\Glow.cpp" />
     <ClCompile Include="TeamFortress2\Features\PlayerArrows\PlayerArrows.cpp" />
+    <ClCompile Include="TeamFortress2\Features\PlayerList\PlayerList.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Prediction\Prediction.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Radar\Radar.cpp" />
+    <ClCompile Include="TeamFortress2\Features\SpectatorList\SpectatorList.cpp" />
+    <ClCompile Include="TeamFortress2\Features\SpyWarning\SpyWarning.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Visuals\Visuals.cpp" />
+    <ClCompile Include="TeamFortress2\SDK\NetVars\NetVars.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TeamFortress2\Features\Aimbot\Aimbot.h" />
-    <ClInclude Include="TeamFortress2\Features\Aimbot\AimbotGlobal\AimbotGlobal.h" />
-    <ClInclude Include="TeamFortress2\Features\Aimbot\AimbotHitscan\AimbotHitscan.h" />
-    <ClInclude Include="TeamFortress2\Features\Aimbot\AimbotMelee\AimbotMelee.h" />
-    <ClInclude Include="TeamFortress2\Features\Aimbot\AimbotProjectile\AimbotProjectile.h" />
-    <ClInclude Include="TeamFortress2\Features\AntiHack\AntiAim.h" />
-    <ClInclude Include="TeamFortress2\Features\ESP\ESP.h" />
-    <ClInclude Include="TeamFortress2\Features\Glow\Glow.h" />
     <ClInclude Include="TeamFortress2\Features\Menu\InputHelper\InputHelper.h" />
     <ClInclude Include="TeamFortress2\Features\Menu\Menu.h" />
     <ClInclude Include="TeamFortress2\Features\Misc\Misc.h" />
     <ClInclude Include="TeamFortress2\Features\Chams\Chams.h" />
-    <ClInclude Include="TeamFortress2\Features\Prediction\Prediction.h" />
-    <ClInclude Include="TeamFortress2\Features\Radar\Radar.h" />
-    <ClInclude Include="TeamFortress2\Features\SpectatorList\SpectatorList.h" />
-    <ClInclude Include="TeamFortress2\Features\SpyWarning\SpyWarning.h" />
-    <ClInclude Include="TeamFortress2\Features\Auto\AutoGlobal\AutoGlobal.h" />
-    <ClInclude Include="TeamFortress2\Features\Auto\AutoShoot\AutoShoot.h" />
-    <ClInclude Include="TeamFortress2\Features\Auto\AutoStab\AutoStab.h" />
-    <ClInclude Include="TeamFortress2\Features\Auto\Auto.h" />
     <ClInclude Include="TeamFortress2\Features\Vars.h" />
-    <ClInclude Include="TeamFortress2\Features\Visuals\Visuals.h" />
     <ClInclude Include="TeamFortress2\Hooks\ClientHook\ClientHook.h" />
     <ClInclude Include="TeamFortress2\Hooks\ClientModeHook\ClientModeHook.h" />
     <ClInclude Include="TeamFortress2\Hooks\EngineClientHook\EngineClientHook.h" />
@@ -406,7 +389,6 @@
     <ClInclude Include="TeamFortress2\SDK\Main\GlobalInfo\GlobalInfo.h" />
     <ClInclude Include="TeamFortress2\SDK\Main\KeyValues\KeyValues.h" />
     <ClInclude Include="TeamFortress2\SDK\Main\TraceFilters\TraceFilters.h" />
-    <ClInclude Include="TeamFortress2\SDK\NetVars\NetVars.h" />
     <ClInclude Include="TeamFortress2\SDK\SDK.h" />
     <ClInclude Include="TeamFortress2\Utils\Color\Color.h" />
     <ClInclude Include="TeamFortress2\Utils\CRC\CRC.h" />
@@ -427,20 +409,41 @@
     <ClInclude Include="TeamFortress2\Utils\UtlVector\UtlVector.h" />
     <ClInclude Include="TeamFortress2\Utils\VFunc\VFunc.h" />
     <ClInclude Include="TeamFortress2\Utils\XorStr\XorStr.h" />
-    <ClInclude Include="TeamFortress2\Features\Auto\AutoDetonate\AutoDetonate.h" />
-    <ClInclude Include="TeamFortress2\Features\ChatInfo\ChatInfo.h" />
     <ClInclude Include="TeamFortress2\Features\Chams\DMEChams.h" />
     <ClInclude Include="TeamFortress2\Features\Menu\ConfigManager\ConfigManager.h" />
     <ClInclude Include="TeamFortress2\Utils\WinAPI\WinAPI.h" />
-    <ClInclude Include="TeamFortress2\Features\Auto\AutoBlast\AutoBlast.h" />
-    <ClInclude Include="TeamFortress2\Features\Auto\AutoUber\AutoUber.h" />
     <ClInclude Include="TeamFortress2\Hooks\DrawStaticPropsHook\DrawStaticPropsHook.h" />
     <ClInclude Include="TeamFortress2\SDK\Interfaces\EngineEffects\EngineEffects.h" />
-    <ClInclude Include="TeamFortress2\Features\AttributeChanger\AttributeChanger.h" />
     <ClInclude Include="TeamFortress2\Hooks\EngineHook\EngineHook.h" />
-    <ClInclude Include="TeamFortress2\Features\PlayerList\PlayerList.h" />
     <ClInclude Include="TeamFortress2\Features\Keybinds\Keybinds.h" />
+    <ClInclude Include="TeamFortress2\Features\Aimbot\AimbotGlobal\AimbotGlobal.h" />
+    <ClInclude Include="TeamFortress2\Features\Aimbot\AimbotHitscan\AimbotHitscan.h" />
+    <ClInclude Include="TeamFortress2\Features\Aimbot\AimbotMelee\AimbotMelee.h" />
+    <ClInclude Include="TeamFortress2\Features\Aimbot\AimbotProjectile\AimbotProjectile.h" />
+    <ClInclude Include="TeamFortress2\Features\Aimbot\Aimbot.h" />
+    <ClInclude Include="TeamFortress2\Features\AntiHack\AntiAim.h" />
+    <ClInclude Include="TeamFortress2\Features\AttributeChanger\AttributeChanger.h" />
+    <ClInclude Include="TeamFortress2\Features\Auto\AutoBlast\AutoBlast.h" />
+    <ClInclude Include="TeamFortress2\Features\Auto\AutoDetonate\AutoDetonate.h" />
+    <ClInclude Include="TeamFortress2\Features\Auto\AutoGlobal\AutoGlobal.h" />
+    <ClInclude Include="TeamFortress2\Features\Auto\AutoShoot\AutoShoot.h" />
+    <ClInclude Include="TeamFortress2\Features\Auto\AutoStab\AutoStab.h" />
+    <ClInclude Include="TeamFortress2\Features\Auto\AutoUber\AutoUber.h" />
+    <ClInclude Include="TeamFortress2\Features\Auto\Auto.h" />
+    <ClInclude Include="TeamFortress2\Features\ChatInfo\ChatInfo.h" />
     <ClInclude Include="TeamFortress2\Features\Console\Console.h" />
+    <ClInclude Include="TeamFortress2\Features\ESP\ESP.h" />
+    <ClInclude Include="TeamFortress2\Features\Glow\Glow.h" />
     <ClInclude Include="TeamFortress2\Features\PlayerArrows\PlayerArrows.h" />
+    <ClInclude Include="TeamFortress2\Features\PlayerList\PlayerList.h" />
+    <ClInclude Include="TeamFortress2\Features\Prediction\Prediction.h" />
+    <ClInclude Include="TeamFortress2\Features\Radar\Radar.h" />
+    <ClInclude Include="TeamFortress2\Features\SpectatorList\SpectatorList.h" />
+    <ClInclude Include="TeamFortress2\Features\SpyWarning\SpyWarning.h" />
+    <ClInclude Include="TeamFortress2\Features\Visuals\Visuals.h" />
+    <ClInclude Include="TeamFortress2\SDK\NetVars\NetVars.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
