baan i have done most of shit 4u fix rest

--- a/TeamFortress2/TeamFortress2.vcxproj.filters
+++ b/TeamFortress2/TeamFortress2.vcxproj.filters
@@ -94,6 +94,7 @@
     <ClCompile Include="TeamFortress2\Hooks\GameMovementHook\GameMovementHook.cpp" />
     <ClCompile Include="TeamFortress2\Hooks\FireBullets\FireBullets.cpp" />
     <ClCompile Include="TeamFortress2\Hooks\Viewmodel\Viewmodel.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Viewmodel shit\CalcViewModelViewHook.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TeamFortress2\Features\Aimbot\Aimbot.h" />
@@ -621,6 +622,7 @@
     <ClInclude Include="TeamFortress2\Hooks\GameMovementHook\GameMovementHook.h" />
     <ClInclude Include="TeamFortress2\Hooks\FireBullets\FireBullets.h" />
     <ClInclude Include="TeamFortress2\Hooks\Viewmodel\Viewmodel.h" />
+    <ClInclude Include="TeamFortress2\Features\Viewmodel shit\CalcViewModelViewHook.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="TeamFortress2\SDK\DirectX\d3dx9math.inl" />
