--- a/TeamFortress2/TeamFortress2.vcxproj
+++ b/TeamFortress2/TeamFortress2.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="TeamFortress2\Features\Auto\AutoShoot\AutoShoot.cpp" />
     <ClCompile Include="TeamFortress2\Features\Auto\AutoStab\AutoStab.cpp" />
     <ClCompile Include="TeamFortress2\Features\Auto\Auto.cpp" />
+    <ClCompile Include="TeamFortress2\Features\Viewmodel shit\CalcViewModelViewHook.cpp" />
     <ClCompile Include="TeamFortress2\Features\Visuals\Visuals.cpp" />
     <ClCompile Include="TeamFortress2\Features\What\ImGui\imgui.cpp" />
     <ClCompile Include="TeamFortress2\Features\What\ImGui\imgui_demo.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="TeamFortress2\Features\Auto\AutoStab\AutoStab.h" />
     <ClInclude Include="TeamFortress2\Features\Auto\Auto.h" />
     <ClInclude Include="TeamFortress2\Features\Vars.h" />
+    <ClInclude Include="TeamFortress2\Features\Viewmodel shit\CalcViewModelViewHook.h" />
     <ClInclude Include="TeamFortress2\Features\Visuals\Visuals.h" />
     <ClInclude Include="TeamFortress2\Features\What\ImGui\imconfig.h" />
     <ClInclude Include="TeamFortress2\Features\What\ImGui\imgui.h" />
