--- a/TeamFortress2/TeamFortress2.vcxproj
+++ b/TeamFortress2/TeamFortress2.vcxproj
@@ -92,6 +92,7 @@
       <Optimization>Disabled</Optimization>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <BasicRuntimeChecks>Default</BasicRuntimeChecks>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
