--- a/TeamFortress2/TeamFortress2.vcxproj.filters
+++ b/TeamFortress2/TeamFortress2.vcxproj.filters
@@ -449,7 +449,7 @@
     <ClInclude Include="TeamFortress2\Utils\MinHook\MinHook.h" />
     <ClInclude Include="TeamFortress2\Utils\MinHook\trampoline.h" />
     <ClInclude Include="TeamFortress2\Utils\Pattern\Pattern.h" />
-    <ClInclude Include="TeamFortress2\Utils\SEOHook\SEOHook.h" />
+    <ClInclude Include="TeamFortress2\Utils\DPHook\DPHook.h" />
     <ClInclude Include="TeamFortress2\Utils\Utils.h" />
     <ClInclude Include="TeamFortress2\Utils\UtlVector\UtlVector.h" />
     <ClInclude Include="TeamFortress2\Utils\VFunc\VFunc.h" />
