--- a/TeamFortress2/TeamFortress2.vcxproj.filters
+++ b/TeamFortress2/TeamFortress2.vcxproj.filters
@@ -623,6 +623,7 @@
     <ClInclude Include="TeamFortress2\Hooks\Viewmodel\Viewmodel.h" />
     <ClInclude Include="TeamFortress2\Features\Viewmodel shit\CalcViewModelViewHook.h" />
     <ClInclude Include="TeamFortress2\Hooks\holiday\hol.h" />
+    <ClInclude Include="TeamFortress2\SDK\Interfaces\InputSystem\InputSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="TeamFortress2\SDK\DirectX\d3dx9math.inl" />
